<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2E2E2E" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/picture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/picture" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/buttonChangePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add_picture" />

                <TextView
                    android:id="@+id/file_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#40000000"
                    android:padding="10dp"
                    android:text="@string/no_file_chosen"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="#40000000"
            android:gravity="center"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:hint="@string/product_name_hint" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="#40000000"
            android:gravity="center"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:hint="@string/description_hint" />

        <Spinner
            android:id="@+id/groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:prompt="@string/admin_groups" />

        <Spinner
            android:id="@+id/mans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:prompt="@string/admin_manufacturers" />

        <EditText
            android:id="@+id/barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="#40000000"
            android:gravity="center"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:hint="@string/barcode_hint" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="#40000000"
            android:gravity="center"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="#ffffff"
            android:hint="@string/quantity_hint" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/button_save" />
    </LinearLayout>

</ScrollView>