<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2E2E"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProductsListActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/filters_label"
            android:textColor="#BABABA"
            android:textSize="20dp"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/groupFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/label"
            android:background="#80000000"
            android:text="@string/group_filter"
            android:textColor="#BABABA"
            android:onClick="filterByGroup" />

        <Button
            android:id="@+id/barcodeFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/label"
            android:background="#80000000"
            android:text="@string/manufacturer_filter"
            android:textColor="#BABABA"
            android:onClick="filterByManufacturer" />
    </RelativeLayout>

    <ListView
        android:id="@+id/productsList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:text="@string/button_proceed"
        android:textColor="#BABABA"
        android:onClick="proceed" />

</LinearLayout>