<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2E2E2E"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
<!-- 
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2E2E2E"/>
-->    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent" >
        
		<EditText 
		    android:id="@+id/username"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:hint="@string/user_hint"
		    android:textColor="#BABABA"/>
		
		<EditText 
		    android:id="@+id/password"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:hint="@string/pass_hint"
		    android:inputType="textPassword"
		    android:textColor="#BABABA" />
		
		<Button 
		    android:id="@+id/sign_in"
		    android:onClick="signIn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="right"
		    android:background="#80000000"
		    android:textColor="#BABABA"
		    android:text="@string/sign_in_hint" >
		</Button>		
		
	</LinearLayout>
</RelativeLayout>